# QuicSort

./: CMakeLists.txt
Inc/: my_sort.h
Src/: main.cpp  my_sort.cpp
lib/: CMakeLists.txt  test1.cpp
